# chain-analyzer

./: next.config.js  package-lock.json  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
app/api/chains/: route.ts
components/: ChainCard.tsx  ChainTable.tsx  Header.tsx  ThemeProvider.tsx  ThemeToggle.tsx
l1-chain-analyzer/backend/: .gitignore  Cargo.toml  Dockerfile
l1-chain-analyzer/backend/src/: main.rs
l1-chain-analyzer/frontend/: .gitignore  Cargo.toml  index.html
l1-chain-analyzer/frontend/style/: main.css
lib/: chains.ts  fetchers.ts
my-app/: package-lock.json
types/: index.ts
webapp/: Cargo.toml  Trunk.toml  package-lock.json  package.json  vercel.json
webapp/api/: handler.rs  index.js
webapp/src/: App.css  App.jsx  main.rs
zk-chain-analyzer/: README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
zk-chain-analyzer/src/: globals.css
zk-chain-analyzer/src/app/: layout.tsx  page.tsx
zk-chain-analyzer/src/components/: ChainChart.tsx  ChainSidebar.tsx  ChainStatCards.tsx  ClientLayout.tsx  ClientRoot.tsx  DataNoticeModal.tsx  LatestTransactions.tsx  WalletSearch.tsx
zk-chain-analyzer/src/utils/: chainApi.ts  useChainData.ts  useWalletData.ts
zk-chain-analyzer/utils/: chainApi.ts  useChainData.ts
