[package]
name = "webapp"
version = "0.1.0"
edition = "2021"

[dependencies]
# Frontend (Yew)
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
wasm-bindgen = "0.2"
web-sys = "0.3"
gloo-net = "0.5"
gloo-timers = "0.3.0"
gloo-storage = "0.3.0"

# Backend (Vercel Functions)
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tower-http = { version = "0.5.0", features = ["cors", "trace", "fs"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
vercel_runtime = "0.8.0"

[lib]
crate-type = ["cdylib", "rlib"] 