[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
reqwest = "0.12"
wasm-bindgen = "0.2"
web-sys = "0.3"
gloo-net = "0.5"
serde = { version = "1.0", features = ["derive"] }
gloo-timers = "0.3.0"
gloo-storage = "0.3.0" 